--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,5 +12,5 @@ jobs:
     - name: Run a one-line script
       run: |
         echo Hello, world!
-        echo ${{github.push.base_ref}}
-        echo ${{github.ref}}
+        echo ${{CHANGE_BRANCH}}
+        echo ${{CHANGE_TARGET}}
