--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,5 +14,5 @@ jobs:
     - name: Run a one-line script
       run: |
         echo Hello, world!
-        echo ${{CHANGE_BRANCH}}
-        echo ${{CHANGE_TARGET}}
+        echo ${{ github.event.pull_request.base.ref }}
+        echo ${{github.ref}} 
