--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: CI
 
 on:
-  pull_request:
+  push:
     branch:
       - main
 
@@ -14,5 +14,5 @@ jobs:
     - name: Run a one-line script
       run: |
         echo Hello, world!
-        echo ${{ github.event.pull_request.base.ref }}
+        echo ${{ github.event.push.base.ref }}
         echo ${{github.ref}} 
