--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,5 +14,5 @@ jobs:
     - name: Run a one-line script
       run: |
         echo Hello, world!
-        echo ${{ github.base.ref }}
+        echo ${{ github.base_ref }}
         echo ${{github.ref}} 
