--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,14 @@
 name: CI
 
 on:
-  pull_request:
+  pull_request_target:
     branches:
       - main
-      - test
     types: [ closed ]
 
 jobs:
   build:
-    #if: github.event.pull_request.merged == 'true'
+    if: github.event.pull_request_target.merged == 'true'
     runs-on: ubuntu-latest
 
     steps:
